# smash-editor

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-and-release.yml  build-macos.yml  build-ubuntu.yml  build-windows.yml
include/: smashedit.h
scripts/: install.ps1  install.sh
src/: buffer.c  buffer.h  clipboard.c  clipboard.h  dialog.c  dialog.h  display.c  display.h  editor.c  editor.h  explorer.c  explorer.h  file.c  file.h  input.c  input.h  main.c  search.c  search.h  smenu.c  smenu.h  syntax.c  syntax.h  undo.c  undo.h
